started making the frontend for projects

--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -43,7 +43,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>D</b>L</span>
       <!-- logo for regular state and mobile devices -->
@@ -109,24 +109,30 @@
 
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">MAIN NAVIGATION</li>
 
         <li class="active treeview">
           <a href="#">
-            <i class="fa"></i> <span>Projects</span>
+            <i class="fa fa-tasks"></i> <span>Projects</span>
             <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa fa-angle-left pull-right"></i>   
             </span>
           </a>
+            <ul class="treeview-menu">
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                    <li><a href="#">test</a></li>
+            </ul>
         </li>
 
 	<li>
-	  <a href="#">
-            <i class="fa"></i> <span>Clients</span>
-	    <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-	    </span>
+	  <a href="/profile">
+        <i class="fa fa-user"></i> <span>Profile</span>
 	  </a>
+  </li>
+  <li>
+  	  <a href="/admin">
+          <i class="fa fa-wrench"></i> <span>Admin</span>
+  	  </a>
 	</li>
 
 
