--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -56,39 +56,6 @@
         <span class="sr-only">Toggle navigation</span>
       </a>
 
-      <div class="navbar-custom-menu">
-        <ul class="nav navbar-nav">
-
-          <!-- User Account: style can be found in dropdown.less -->
-          <li class="dropdown user user-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-	      <span class="hidden-xs">{{user_name}}</span>
-            </a>
-
-            <ul class="dropdown-menu">
-              <!-- Menu Body -->
-
-              <!-- Menu Footer-->
-              <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
-                <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                </div>
-              </li>
-
-            </ul>
-
-          </li>
-
-
-          <!-- Control Sidebar Toggle Button -->
-          <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-          </li>
-        </ul>
-      </div>
     </nav>
   </header>
 
@@ -134,6 +101,11 @@
           <i class="fa fa-wrench"></i> <span>Admin</span>
   	  </a>
 	</li>
+    <li>
+    	  <a href="/logout">
+            <i class="fa fa-sign-out"></i> <span>Logout</span>
+    	  </a>
+  	</li>
 
 
       </ul>
