--- a/data_logger/templates/profile.html
+++ b/data_logger/templates/profile.html
@@ -1,4 +1,43 @@
 {% extends "base.html" %}
 {% block body %}
-    Profile
+<div class="col-md-6 col-md-push-3">
+      <!-- general form elements -->
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Profile informations</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form role="form">
+          <div class="box-body">
+            <div class="form-group">
+              <label for="userName">Name</label>
+              <input type="text" class="form-control" id="userName" placeholder="Your name">
+            </div>
+            <div class="form-group">
+              <label for="userSurname">Surname</label>
+              <input type="text" class="form-control" id="userSurname" placeholder="Your surname">
+            </div>
+            <div class="form-group">
+              <label for="inputEmail1">Email address</label>
+              <input type="email" class="form-control" id="inputEmail1" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="userAdminLevel">Level of administration</label>
+              <p type="text" class="form-control" id="userAdminLevel">Administrator</p>
+            <div class="form-group">
+              <label for="inputPassword1">Password</label>
+              <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+            </div>
+          </div>
+          <!-- /.box-body -->
+
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Confirm changes</button>
+          </div>
+        </form>
+      </div>
+      <!-- /.box -->
+
+    </div>
 {% endblock %}
