--- a/data_logger/templates/admin.html
+++ b/data_logger/templates/admin.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
+
+<div class="col-md-6">
     <div class="box box-primary">
         
         
@@ -30,7 +32,8 @@
             </div>
     </div>
     
-    
+    </div>
+    <div class="col-md-6">
     
     <div class="box box-primary">
         
@@ -62,6 +65,6 @@
             </div>
             <!-- /.box-body -->
             <!-- /.box-footer -->
-          
+          </div>
     </div>
 {% endblock %}
