--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -128,7 +128,7 @@
     </section>
 
     <!-- Main content -->
-    <section class="content">
+    <section class="content" style="display:flex;">
      {%block body%}{%endblock%}
     </section>
     <!-- /.content -->
