--- a/data_logger/templates/addSensor.html
+++ b/data_logger/templates/addSensor.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <div class="col-md-6 col-md-push-3">
+    <div class="row">
   <!-- general form elements -->
   <div class="box box-primary">
     <div class="box-header with-border">
@@ -12,7 +13,7 @@
       <div class="box-body">
         <div class="form-group">
           <label for="sensorName">Sensor Name</label>
-          <input type="name" class="form-control" id="sensorName" placeholder="Enter Sensor Name">
+          <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
         </div>
         <div class="collapsableType">          
           <label>Disabled Result</label>
@@ -31,9 +32,10 @@
       <!-- /.box-body -->
       
       <div class="box-footer">
-        <button type="confirmSensor" class="btn btn-primary">Add</button>
+        <button type="submit" class="btn btn-primary">Add</button>
       </div>
     </form>
+  </div>
   </div>
   <!-- /.box -->
 </div> 
