--- a/data_logger/templates/addUser.html
+++ b/data_logger/templates/addUser.html
@@ -1,4 +1,24 @@
 {% extends "base.html" %}
 {% block body %}
-    Admin
+<div class="col-md-6 col-md-push-3">
+  <div class="box box-info">
+    <div class="box-header with-border">
+      <h3 class="box-title">Add User to Current Project</h3>
+    </div>
+    <!-- /.box-header -->
+    <!-- form start -->
+    <form role="form">
+      <div class="box-body">
+        <div class="form-group">
+          <label for="collaboratorUsername">Username</label>
+          <input type="text" class="form-control" id="collaboratorUsername" placeholder="Enter Username">
+        </div>
+      </div>
+      <!-- /.box-body -->
+      <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Send Invite</button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
