--- a/data_logger/templates/admin.html
+++ b/data_logger/templates/admin.html
@@ -16,16 +16,18 @@
             <!-- /.box-header -->
             <div class="box-body">
               <ul class="products-list product-list-in-box">
+                  {% for project in projects_ask_approval %}
                 <li class="item">
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Project name</a>
+                    <a href="javascript:void(0)" class="product-title">{{project.name}}</a>
                     <a class="label label-danger pull-right" href="#">Refute</a>
                       <a class="label label-success pull-right" href="#">Validate</a>
                     <span class="product-description">
-                          User name
+                         TODO
                         </span>
                   </div>
                 </li>
+                {% endfor %}
             
                 <!-- /.item -->
               </ul>
@@ -49,16 +51,20 @@
             <!-- /.box-header -->
             <div class="box-body">
               <ul class="products-list product-list-in-box">
+                  
+                      {% for project in projects_ask_approval %}
                 <li class="item">
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Project name going from 10 sensors to 20</a>
+                    <a href="javascript:void(0)" class="product-title">{{project.name}}</a>
                     <a class="label label-danger pull-right" href="#">Refute</a>
                       <a class="label label-success pull-right" href="#">Validate</a>
                     <span class="product-description">
-                          User name 
+                          TODO
                         </span>
                   </div>
                 </li>
+                
+                {% endfor %}
             
                 <!-- /.item -->
               </ul>
