--- a/data_logger/templates/admin.html
+++ b/data_logger/templates/admin.html
@@ -52,7 +52,7 @@
             <div class="box-body">
               <ul class="products-list product-list-in-box">
                   
-                      {% for project in projects_ask_approval %}
+                      {% for project in projects_ask_sensor %}
                 <li class="item">
                   <div class="product-info">
                     <a href="javascript:void(0)" class="product-title">{{project.name}}</a>
