added list of project on index

--- a/data_logger/templates/404.html
+++ b/data_logger/templates/404.html
@@ -5,5 +5,11 @@
         <h4>Error 404</h4>
         <p>This page does not exist</p>
 </div>
+
+
+<script src="/static/js/404Game.js"></script>
+<canvas width='500' height='500' id="404-canvas"  style="background-color:white;">
+</canvas>
 </div>
+
 {% endblock %}
