--- a/data_logger/templates/index.html
+++ b/data_logger/templates/index.html
@@ -4,4 +4,53 @@
         <h4>Navigation information</h4>
         <p>Use the side bar to navigate through the application.</p>
 </div>
+
+
+<div class="col-md-6">
+    <div class="box box-info">
+            <div class="box-header with-border">
+              <h3 class="box-title">Projects</h3>
+
+              <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+              </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <div class="table-responsive">
+                <table class="table no-margin">
+                  <thead>
+                  <tr>
+                    <th>Project name</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                      
+                      
+                  {% for project in project_list %}
+                  <tr>
+                    <td>{{project.name}}</td>
+                    
+                    <td><a href="/project/{{project.id}}">edit</a></td>
+                    <td><a href="/project/{{project.id}}/delete">delete</a></td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+              <!-- /.table-responsive -->
+            </div>
+            <!-- /.box-body -->
+            <div class="box-footer clearfix">
+              <a href="/app.py/add/project" class="btn btn-sm btn-info btn-flat pull-left">Add project</a>
+              <div class="pull-right">{{ project_list|length }} project</div>
+            </div>
+            <!-- /.box-footer -->
+            </div>
+</div>          
 {% endblock %}
