--- a/data_logger/templates/profile.html
+++ b/data_logger/templates/profile.html
@@ -12,15 +12,15 @@
           <div class="box-body">
             <div class="form-group">
               <label for="userName">Name</label>
-              <input type="text" class="form-control" id="userName" value="{{ user.name }}">
+              <input type="text" class="form-control" id="username" value="{{ user.name }}">
             </div>
             <div class="form-group">
               <label for="userSurname">First name</label>
-              <input type="text" class="form-control" id="userFirstname" value="{{ user.first_name }}">
+              <input type="text" class="form-control" id="userfirstname" value="{{ user.first_name }}">
             </div>
             <div class="form-group">
               <label for="inputEmail1">Email address</label>
-              <input type="email" class="form-control" id="inputEmail1" value="{{ user.email }}">
+              <input type="email" class="form-control" id="inputEmail" value="{{ user.email }}">
             </div>
             <div class="form-group">
               <label for="userAdminLevel">Level of administration</label>
@@ -29,7 +29,7 @@
           <!-- /.box-body -->
 
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Confirm changes</button>
+            <button type="submit" class="btn btn-primary" id="confirmButton">Confirm changes</button>
           </div>
         </form>
       </div>
