--- a/data_logger/templates/project.html
+++ b/data_logger/templates/project.html
@@ -9,7 +9,6 @@
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                 </button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
               </div>
             </div>
             <!-- /.box-header -->
@@ -25,15 +24,15 @@
                   </tr>
                   </thead>
                   <tbody>
-                      
-                      
+
+
                   {% for sensor in sensors %}
                   <tr>
                     <td>{{sensor.name}}</td>
-                    
-                    <td><a href="/project/{{id}}/download/sensor/{{sensor.id}}">download</a></td>
-                    <td><a href="/project/{{id}}/edit/sensor/{{sensor.id}}">edit</a></td>
-                    <td><a href="/project/{{id}}/delete/sensor/{{sensor.id}}">delete</a></td>
+
+                    <td><a href="/app.py/project/{{id}}/download/sensor/{{sensor.id}}">download</a></td>
+                    <td><a href="/app.py/project/{{id}}/edit/sensor/{{sensor.id}}">edit</a></td>
+                    <td><a href="/app.py/project/{{id}}/delete/sensor/{{sensor.id}}">delete</a></td>
                   </tr>
                   {% endfor %}
                   </tbody>
@@ -43,12 +42,12 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="/project/id/add/sensor" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</a>
+              <a href="/app.py/project/id/add/sensor" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</a>
               <div class="pull-right">{{ sensors|length }}/15 sensors   <a href="javascript:void(0)" class="btn btn-sm btn-flat btn-info">Ask for more sensors</a></div>
             </div>
             <!-- /.box-footer -->
             </div>
-</div>          
+</div>
 
 
 
@@ -75,12 +74,12 @@
                   </tr>
                   </thead>
                   <tbody>
-                      
+
                       {% for member in members %}
                       <tr>
                         <td>{{member.name}}</td>
-                        
-                        <td><a href="/project/{{id}}/delete/user/{{member.id}}">remove</a></td>
+
+                        <td><a href="/app.py/project/{{id}}/delete/user/{{member.id}}">remove</a></td>
                       </tr>
                       {% endfor %}
                   </tbody>
@@ -90,10 +89,10 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="/project/id/add/user" class="btn btn-sm btn-info btn-flat pull-left">Add user</a>
+              <a href="/app.py/project/id/add/user" class="btn btn-sm btn-info btn-flat pull-left">Add user</a>
               <div class="pull-right">{{ members|length }} users</div>
             </div>
             <!-- /.box-footer -->
             </div>
-</div>   
+</div>
 {% endblock %}
