--- a/data_logger/templates/addSensor.html
+++ b/data_logger/templates/addSensor.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="col-md-6 col-md-push-3">
+<div class="col-lg-6 col-lg-push-3 col-md-12">
     <div class="row">
   <!-- general form elements -->
   <div class="box box-primary">
@@ -9,27 +9,7 @@
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form role="form">
-      <div class="box-body">
-        <div class="form-group">
-          <label for="sensorName">Sensor Name</label>
-          <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
-        </div>
-        <div class="collapsableType">          
-          <label>Sensor type</label>
-          <select class="form-control select2 select2-hidden-accessible" style="width: 100%;" tabindex="-1" aria-hidden="true">
-            {% for sensor in sensors %}
-                <option value="{{ sensor.id}}">{{ sensor.sensor_name }}</option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
-      <!-- /.box-body -->
-      
-      <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Add</button>
-      </div>
-    </form>
+    
   </div>
   </div>
   <!-- /.box -->
