--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -83,18 +83,12 @@
                   <i class="fa fa-home"></i> <span>Home</span>
           	  </a>
             </li>
-            <!--
-        <li class="treeview">
-          <a href="#">
+            
+        <li>
+          <a href="/app.py/projects">
             <i class="fa fa-tasks"></i> <span>Projects</span>
           </a>
-            <ul class="treeview-menu">
-                {% for project in project_list%}
-                <li><a href="/app.py/project/{{project.id}}">{{project.name}}</a></li>
-                {% endfor %}
-                <li><a href="/app.py/add/project/">Add project</a></li>
-            </ul>
-        </li>-->
+        </li>
 
 	<li>
 	  <a href="/app.py/profile" name="sideBarProfile">
