--- a/data_logger/templates/addUser.html
+++ b/data_logger/templates/addUser.html
@@ -7,11 +7,11 @@
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form role="form">
+    <form action="/redirect/adduser" method="post" role="form">
       <div class="box-body">
         <div class="form-group">
           <label for="collaboratorUsername">Username</label>
-          <input type="text" class="form-control" id="collaboratorUsername" placeholder="Enter Username">
+          <input type="text" name="username" class="form-control" id="collaboratorUsername" placeholder="Enter Username">
         </div>
       </div>
       <!-- /.box-body -->
