--- a/data_logger/templates/project.html
+++ b/data_logger/templates/project.html
@@ -17,7 +17,7 @@
                 
 
                   {% for sensor in sensors %}
-                  <div class="accordion" id="accordion2">
+                  <div class="accordion" id="accordion{{sensor.id}}">
                       <div class="accordion-group">
                           <div class="accordion-heading">
                               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
@@ -38,7 +38,7 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <button data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</button>
+              <button data-toggle="modal" data-target="#sensorModal" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</button>
               <div class="pull-right">{{ sensors|length }}/15 sensors   <a href="javascript:void(0)" class="btn btn-sm btn-flat btn-info">Ask for more sensors</a></div>
             </div>
             <!-- /.box-footer -->
@@ -85,7 +85,8 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="/app.py/project/{{id}}/add/user" class="btn btn-sm btn-info btn-flat pull-left">Add user</a>
+                <button data-toggle="modal" data-target="#userModal" class="btn btn-sm btn-info btn-flat pull-left">Add user</button>
+                
               <div class="pull-right">{{ members|length }} users</div>
             </div>
             <!-- /.box-footer -->
@@ -96,7 +97,7 @@
 
 <!-- modal for sensors -->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="sensorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -106,7 +107,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form">
+            <form role="form" action="/project/{{id}}/TODO" method="post">
                 <div class="form-group">
                     <label for="sensorName">Sensor Name</label>
                     <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
@@ -137,7 +138,35 @@
                         <option>30 minutes for 60 months</option>
                     </select>
                 </div>
-                  <submit type="submit" class="btn btn-primary">Add/edit</submit>
+                  <input type="submit" class="btn btn-primary" value="add"></input>
+            <!-- /.box-body -->
+            
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- modal for users -->
+
+<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel" style='display:initial;'>Add user</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+            <form role="form" action="/project/{{id}}/add/user" method="post">
+                <div class="form-group">
+                    <label for="sensorName">user Name</label>
+                    <input type="text" class="form-control" id="userID" name="userID" placeholder="Enter user name">
+                </div>
+                  <input type="submit" class="btn btn-primary" value="add"></input>
             <!-- /.box-body -->
             
           </form>
