--- a/data_logger/templates/profile.html
+++ b/data_logger/templates/profile.html
@@ -8,19 +8,19 @@
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <form role="form">
+        <form action="/profile" method="post" role="form">
           <div class="box-body">
             <div class="form-group">
               <label for="userName">Name</label>
-              <input type="text" class="form-control" id="username" value="{{ user.name }}">
+              <input type="text" name="username" class="form-control" id="username" value="{{ user.name }}">
             </div>
             <div class="form-group">
               <label for="userSurname">First name</label>
-              <input type="text" class="form-control" id="userfirstname" value="{{ user.first_name }}">
+              <input type="text" name="userfirstname" class="form-control" id="userfirstname" value="{{ user.first_name }}">
             </div>
             <div class="form-group">
               <label for="inputEmail1">Email address</label>
-              <input type="email" class="form-control" id="inputEmail" value="{{ user.email }}">
+              <input type="email" name="email" class="form-control" id="inputEmail" value="{{ user.email }}">
             </div>
             <div class="form-group">
               <label for="userAdminLevel">Level of administration</label>
