--- a/data_logger/templates/404.html
+++ b/data_logger/templates/404.html
@@ -11,6 +11,8 @@
 
 <script src="/static/js/404game.js"></script>
 
+<audio autoplay>
+    <source src="/static/audio/russia.mp3" type="audio/mpeg"></audio>
 </div>
 
 {% endblock %}
