--- a/data_logger/templates/project.html
+++ b/data_logger/templates/project.html
@@ -38,7 +38,7 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <button data-toggle="modal" data-target="#sensorModal" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</button>
+              <button data-toggle="modal" data-target="#clientModal" class="btn btn-sm btn-info btn-flat pull-left">Add client</button>
               <div class="pull-right">{{ sensors|length }}/15 sensors   <a href="javascript:void(0)" class="btn btn-sm btn-flat btn-info">Ask for more sensors</a></div>
             </div>
             <!-- /.box-footer -->
@@ -107,7 +107,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form" action="/project/{{id}}/TODO" method="post">
+            <form role="form" action="/project/{{id}}/client/{{TODO}}/add/sensor" method="post">
                 <div class="form-group">
                     <label for="sensorName">Sensor Name</label>
                     <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
@@ -165,6 +165,32 @@
                 <div class="form-group">
                     <label for="sensorName">user Name</label>
                     <input type="text" class="form-control" id="userID" name="userID" placeholder="Enter user name">
+                </div>
+                  <input type="submit" class="btn btn-primary" value="add"></input>
+            <!-- /.box-body -->
+            
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- modal for users -->
+
+<div class="modal fade" id="clientModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel" style='display:initial;'>Add client</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+            <form role="form" action="/project/{{id}}/add/client" method="post">
+                <div class="form-group">
+                    <label for="sensorName">client Name</label>
+                    <input type="text" class="form-control" id="clientID" name="clientID" placeholder="Enter user name">
                 </div>
                   <input type="submit" class="btn btn-primary" value="add"></input>
             <!-- /.box-body -->
