--- a/data_logger/templates/project.html
+++ b/data_logger/templates/project.html
@@ -107,7 +107,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form" action="/project/{{id}}/client/{{TODO}}/add/sensor" method="post">
+            <form role="form" action="/app.py/project/{{id}}/client/{{TODO}}/add/sensor" method="post">
                 <div class="form-group">
                     <label for="sensorName">Sensor Name</label>
                     <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
@@ -161,7 +161,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form" action="/project/{{id}}/add/user" method="post">
+            <form role="form" action="/app.py/project/{{id}}/add/user" method="post">
                 <div class="form-group">
                     <label for="sensorName">user Name</label>
                     <input type="text" class="form-control" id="userID" name="userID" placeholder="Enter user name">
@@ -187,7 +187,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form" action="/project/{{id}}/add/client" method="post">
+            <form role="form" action="/app.py/project/{{id}}/add/client" method="post">
                 <div class="form-group">
                     <label for="sensorName">client Name</label>
                     <input type="text" class="form-control" id="clientID" name="clientID" placeholder="Enter user name">
