--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -83,7 +83,7 @@
                   <i class="fa fa-home"></i> <span>Home</span>
           	  </a>
             </li>
-            
+
         <li>
           <a href="/app.py/projects">
             <i class="fa fa-tasks"></i> <span>Projects</span>
@@ -95,11 +95,13 @@
         <i class="fa fa-user"></i> <span>Profile</span>
 	  </a>
   </li>
+  {%- if user_privilege=="admin" %}
   <li>
   	  <a href="/app.py/admin">
           <i class="fa fa-wrench"></i> <span>Admin</span>
   	  </a>
 	</li>
+  {% endif %}
     <li>
     	  <a href="/app.py/logout">
             <i class="fa fa-sign-out"></i> <span>Logout</span>
