--- a/data_logger/templates/addUser.html
+++ b/data_logger/templates/addUser.html
@@ -7,7 +7,7 @@
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form action="/redirect/adduser" method="post" role="form">
+    <form action="/project/1/add/user" method="post" role="form">
       <div class="box-body">
         <div class="form-group">
           <label for="collaboratorUsername">Username</label>
